--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,27 @@
         "memory": "cpp",
         "ipc.h": "c",
         "signal.h": "c",
-        "distancesensors.hpp": "c"
+        "distancesensors.hpp": "c",
+        "optional": "c",
+        "charconv": "cpp",
+        "condition_variable": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "cuchar": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "random": "cpp",
+        "regex": "cpp",
+        "set": "cpp",
+        "rope": "cpp",
+        "slist": "cpp",
+        "future": "cpp",
+        "mutex": "cpp",
+        "scoped_allocator": "cpp",
+        "shared_mutex": "cpp",
+        "valarray": "cpp"
     }
 }
