--- a/platform/image/Image/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
+++ b/platform/image/Image/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
@@ -30,96 +30,107 @@
 
 	&amba_pl {
 
-		dma@44000000 {
-			compatible = "vdma_control_driver";	
-			reg = <0x44000000 0x10000>, <0x01000000 0x800000>;
-			interrupts = <0 31 4>;
-			memory-region = <&reservedmemory0>;
-		};
+		v_demosaic@43c20000 {
+			reset-gpios = <&gpio0 55 1>;
 
-		v_tpg@44c00000 {
-			compatible = "xlnx,v-tpg-8.0";
-			reg = <0x44C00000 0x10000>, <0x41210000 0x10000>;
 			ports {
-				address-cells = <1>;
-				size-cells = <0>;
+				#address-cells = <1>;
+				#size-cells = <0>;
 
-				port@00000000 {
+				port@0 {
 					reg = <0>;
-					xlnx,video-format = <2>;
 					xlnx,video-width = <8>;
 
-					tpg_in: endpoint {
-						remote-endpoint = <&reservedmemory0>;
+					demosaic_in: endpoint {
+						remote-endpoint = <&ov7670_0>;
+					};
+				};
+
+				port@1 {
+					reg = <1>;
+					xlnx,video-width = <8>;
+
+					demosaic_out: endpoint {
+						remote-endpoint = <&vcap0_in>;
 					};
 				};
 			};
 		};
 
-		timer@42800000 {
-			compatible = "driver_pwm_EMIOgpio_PL_1";	
-			reg = <0x42800000 0x10000>, <0x41200000 0x10000>;
-			clock-frequency = <100000000>;
+
+		v_frmbuf_wr@43c00000 {
+			reset-gpios = <&gpio0 54 1>;
+			xlnx,dma-addr-width = <32>;
+			
+			xlnx,pixels-per-clock = <1>;
 		};
 
-		timer@42810000 {
-			compatible = "driver_pwm_EMIOgpio_PL_2";	
-			reg = <0x42810000 0x10000>, <0x41260000 0x10000>;
-			clock-frequency = <100000000>;
-		};
+		axi_video_cap {
+			compatible = "xlnx,video";
+			dmas = <&v_frmbuf_wr_0 0>;
+			dma-names = "port0";
 
-		gpio@41210000 {
-			compatible = "driver_EMIOgpio_PL";	
-			reg = <0x41210000 0x10000>;
-		};
+			ports {
+				#address-cells = <1>;
+				#size-cells = <0>;
 
-		gpio@41220000 {
-			compatible = "driver_encoder_EMIOgpio_PL_1";	
-			reg = <0x41220000 0x10000>;
-			interrupts = <0 29 4>;
-		};
+				port@0 {
+					reg = <0>;
+					direction = "input";
+					vcap0_in: endpoint {
+						remote-endpoint = <&demosaic_out>;
+					};
+				};
+			};
+ 		};
 
-		gpio@41230000 {
-			compatible = "driver_encoder_EMIOgpio_PL_2";	
-			reg = <0x41230000 0x10000>;
-			interrupts = <0 30 4>;
-		};
-
-		gpio@41240000 {
-			compatible = "driver_buttons_EMIOgpio_PL_1";	
-			reg = <0x41240000 0x10000>;
-			interrupts = <0 32 4>;
-		};
-
-		gpio@41250000 {
-			compatible = "driver_leds_EMIOgpio_PL";	
-			reg = <0x41250000 0x10000>;
-		};
 	};
 
 
 	&amba {
-		
-		gpio@e000a000 {
-			compatible = "driver_MIOgpio_PS";
-			reg = <0xE000A000 0x1000>,<0xF8000000 0x1000>;
-			interrupts = <0 20 4>;
-		};
-
 
 		i2c@e0004000 {
 			status = "okay";
 			clock-frequency = <100000>;
 			
-			i2c@0 {
-				reg = <0>;
-				ov7670@0x21 {
-					compatible = "ov7670";
-					reg = <0x21>;
+			ov7670: camera@21 {
+				compatible = "ovti,ov7670";
+				reg = <0x21>;
+				clocks = <&clkc 0x11>;
+				clock-names = "xclk";
+
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_sensor_power &pinctrl_sensor_reset>;
+				reset-gpios = <&gpio0 0 1>;
+				powerdown-gpios = <&gpio0 13 0>;
+
+				/*ov7670,pclk-hb-disable;*/
+				port {
+					ov7670_0: endpoint {
+						hsync-active = <1>;
+						vsync-active = <1>;
+
+						remote-endpoint = <&demosaic_in>;
+					};
 				};
-				HMC5883L@0x1E {
-					compatible = "HMC5883L";
-					reg = <0x1E>;
+			};
+			HMC5883L@0x1E {
+				compatible = "HMC5883L";
+				reg = <0x1E>;
+			};
+
+		};
+		
+		slcr@f8000000 {
+			pinctrl@700 {
+				pinctrl_sensor_power: sensor_power {
+					function = "gpio0";
+					bias-disable;
+				};
+
+				pinctrl_sensor_reset: sensor_reset {
+					function = "gpio0";
+					bias-disable;
 				};
 			};
 		};
