driver and headlights were added to the library

--- a/smartscout/smartnav-platform/project-spec/meta-user/recipes-apps/develop-smartnavlib/files/Makefile
+++ b/smartscout/smartnav-platform/project-spec/meta-user/recipes-apps/develop-smartnavlib/files/Makefile
@@ -1,4 +1,4 @@
-SUBDIR = modules/capture-frame modules/frame-processor modules/hc-sr04 modules/fuzzy-control-system
+SUBDIR = modules/capture-frame modules/frame-processor modules/hc-sr04 modules/fuzzy-control-system modules/driver modules/headlights
 
 OBJECTS_DIR = ./obj
 
