--- a/smartscout/smartscout-platform/project-spec/meta-user/recipes-apps/develop-smartnavlib/.vscode/settings.json
+++ b/smartscout/smartscout-platform/project-spec/meta-user/recipes-apps/develop-smartnavlib/.vscode/settings.json
@@ -63,6 +63,19 @@
     "thread": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "ranges": "cpp"
+    "ranges": "cpp",
+    "csignal": "cpp",
+    "any": "cpp",
+    "strstream": "cpp",
+    "bitset": "cpp",
+    "cinttypes": "cpp",
+    "unordered_set": "cpp",
+    "optional": "cpp",
+    "source_location": "cpp",
+    "future": "cpp",
+    "cfenv": "cpp",
+    "typeindex": "cpp",
+    "variant": "cpp",
+    "coroutine": "cpp"
   }
 }
